--- a/Desafio de Projeto - Construindo o Seu Primeiro Jogo de Nave/index.html
+++ b/Desafio de Projeto - Construindo o Seu Primeiro Jogo de Nave/index.html
@@ -10,7 +10,7 @@
         <div id="fundoGame">
             <div id="inicio" onclick="start()">
                 <h1> Resgate do Soldado Ryan </h1>
-                <p>Utilize a tecla ↑ para movimentar o helicóptero para cima, a tecla ↓ para movimentar o helicóptero para baixo e a tecla D para atirar.</p>
+                <p>Utilize a tecla ↑ para movimentar o helicóptero para cima, a tecla ↓ para movimentar o helicóptero para baixo e a tecla D para atirar. Lembre-se, você possui 3 vidas e a cada colisão, seja com outro helicóptero ou caminhão, perderá uma.</p>
                 <p> Clique aqui para iniciar!! </p>
             </div>
         </div>
@@ -25,9 +25,9 @@
     <audio src="./assets/audios/resgate.mp3" preload="auto" id="somResgate"></audio>
 
     <!-- Scripts do jogo ! -->
-    <script type="text/javascript" src="./js/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="./jquery/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="./main.js/main.js"></script>
-    <script type="text/javascript" src="./js/jquery-collision.min.js"></script>
+    <script type="text/javascript" src="./jquery/jquery-collision.min.js"></script>
 </body>
 <footer>
     <p>Repositório <a href="https://github.com/Lopes-Marcelo/BootcampJavaScriptGameDeveloper" target="_blank">GitHub</a> desse projeto!</p>
