--- a/Desafio de Projeto - Construindo o Seu Primeiro Jogo de Nave/index.html
+++ b/Desafio de Projeto - Construindo o Seu Primeiro Jogo de Nave/index.html
@@ -30,7 +30,7 @@
     <script type="text/javascript" src="./jquery/jquery-collision.min.js"></script>
 </body>
 <footer>
-    <p>Repositório <a href="https://github.com/Lopes-Marcelo/BootcampJavaScriptGameDeveloper" target="_blank">GitHub</a> desse projeto!</p>
+    <p>Repositório <a href="https://github.com/Lopes-Marcelo/BootcampJavaScriptGameDeveloper/tree/main/Desafio%20de%20Projeto%20-%20Construindo%20o%20Seu%20Primeiro%20Jogo%20de%20Nave" target="_blank">GitHub</a> desse projeto!</p>
     <p>&copy; Marcelo Lopes</p>  
 </footer>
 </html>
