--- a/Desafio de Projeto - Criando Seu Jogo no Estilo Space Shooter/index.html
+++ b/Desafio de Projeto - Criando Seu Jogo no Estilo Space Shooter/index.html
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="./js/script.js"></script>
 </body>
 <footer>
-    <p>Repositório <a href="https://github.com/Lopes-Marcelo/BootcampJavaScriptGameDeveloper" target="_blank">GitHub</a> desse projeto!</p>
+    <p>Repositório <a href="https://github.com/Lopes-Marcelo/BootcampJavaScriptGameDeveloper/tree/main/Desafio%20de%20Projeto%20-%20Criando%20Seu%20Jogo%20no%20Estilo%20Space%20Shooter" target="_blank">GitHub</a> desse projeto!</p>
     <p>&copy; Marcelo Lopes</p>  
 </footer>
 </html>
