--- a/Desafio de Projeto - Criando seu Próprio Jogo da Velha com HTML e JavaScript/index.html
+++ b/Desafio de Projeto - Criando seu Próprio Jogo da Velha com HTML e JavaScript/index.html
@@ -50,7 +50,7 @@
 </body>
 <script src="./js/main.js"></script>
 <footer class="footer">
-    <p>Repositório <a href="https://github.com/Lopes-Marcelo/BootcampJavaScriptGameDeveloper/" target="_blank">GitHub</a> desse projeto!</p>
+    <p>Repositório <a href="https://github.com/Lopes-Marcelo/BootcampJavaScriptGameDeveloper/tree/main/Desafio%20de%20Projeto%20-%20Criando%20seu%20Pr%C3%B3prio%20Jogo%20da%20Velha%20com%20HTML%20e%20JavaScript" target="_blank">GitHub</a> desse projeto!</p>
     <p>&copy; Marcelo Lopes</p>
 </footer>
 </html>
